--- a/packages/frontend-embed/src/index.html
+++ b/packages/frontend-embed/src/index.html
@@ -27,6 +27,8 @@
 	/>
 	<meta property="og:site_name" content="[DEV BUILD] Sharkey" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel='stylesheet' href='/assets/phosphor-icons/bold/style.css'>
+	<link rel='stylesheet' href='/static-assets/fonts/sharkey-icons/style.css'>
 </head>
 
 <body>
