--- a/packages/frontend/src/index.html
+++ b/packages/frontend/src/index.html
@@ -28,6 +28,8 @@
 	<meta property="og:site_name" content="[DEV BUILD] Misskey" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="theme-color-orig" content="#86b300">
+	<link rel='stylesheet' href='/assets/phosphor-icons/bold/style.css'>
+	<link rel='stylesheet' href='/static-assets/fonts/sharkey-icons/style.css'>
 </head>
 
 <body>
